--- a/ImageProject-03/index.html
+++ b/ImageProject-03/index.html
@@ -11,24 +11,30 @@
 <a-sphere src="assets3/leaves.jpg" position="0 1.5 -5" radius="1" color="#228B22"></a-sphere>
 
 <!--Bunny--> 
-<a-sphere position="0 0.5 -5" radius="0.5" color="#ffffff"></a-sphere>
-<a-sphere position="0 1.1 -5" radius="0.35" color="#ffffff"></a-sphere>
-<!--ears-->
-<a-cylinder position="-0.15 1.55 -5" radius="0.07" height="0.5" color="#ffffff"></a-cylinder>
-<a-cylinder position="0.15 1.55 -5" radius="0.07" height="0.5" color="#ffffff"></a-cylinder>
-<a-cylinder position="-0.15 1.55 -4.95" radius="0.04" height="0.5" color="#ffb6c1"></a-cylinder>
-<a-cylinder position="0.15 1.55 -4.95" radius="0.04" height="0.5" color="#ffb6c1"></a-cylinder>
-<!--eyes-->
-<a-sphere position="-0.12 1.15 -4.7" radius="0.05" color="#000000"></a-sphere>
-<a-sphere position="0.12 1.15 -4.7" radius="0.05" color="#000000"></a-sphere>
-<!--nose-->
-<a-sphere position="0 1.05 -4.65" radius="0.03" color="#ff69b4"></a-sphere>
-<!--Bunnies feet-->
-<a-sphere position="-0.25 0.2 -4.7" radius="0.15" color="#ffffff"></a-sphere>
-<a-sphere position="0.25 0.2 -4.7" radius="0.15" color="#ffffff"></a-sphere>
+<a-sphere position="3 0.5 -5" radius="0.5" color="#ffffff"></a-sphere>
 
-<!-- Tail -->
-<a-sphere position="0 0.7 -5.5" radius="0.15" color="#ffffff"></a-sphere>
+<!-- Head -->
+<a-sphere position="3 1.1 -5" radius="0.35" color="#ffffff"></a-sphere>
+
+<!-- Bunny Ears -->
+<a-cylinder position="2.85 1.55 -5" radius="0.07" height="0.5" color="#ffffff"></a-cylinder>
+<a-cylinder position="3.15 1.55 -5" radius="0.07" height="0.5" color="#ffffff"></a-cylinder>
+<a-cylinder position="2.85 1.55 -4.95" radius="0.04" height="0.5" color="#ffb6c1"></a-cylinder>
+<a-cylinder position="3.15 1.55 -4.95" radius="0.04" height="0.5" color="#ffb6c1"></a-cylinder>
+
+<!-- Eyes -->
+<a-sphere position="2.93 1.15 -4.7" radius="0.05" color="#000000"></a-sphere>
+<a-sphere position="3.07 1.15 -4.7" radius="0.05" color="#000000"></a-sphere>
+
+<!-- Nose -->
+<a-sphere position="3 1.05 -4.65" radius="0.03" color="#ff69b4"></a-sphere>
+
+<!-- Bunnies Feet -->
+<a-sphere position="2.8 0.2 -4.7" radius="0.15" color="#ffffff"></a-sphere>
+<a-sphere position="3.2 0.2 -4.7" radius="0.15" color="#ffffff"></a-sphere>
+
+<!--Bunnies Tail -->
+<a-sphere position="3 0.7 -5.5" radius="0.15" color="#ffffff"></a-sphere>
     </a-scene>
   </body>
 </html>
