--- a/ImageProject-03/index.html
+++ b/ImageProject-03/index.html
@@ -6,33 +6,33 @@
   <body>
     <a-scene>
       <!--Tree-->
-      <a-sky src="assets3/backdrop.jpg" " ></a-sky>
-      <a-cylinder src="ood.jpeg" position="0 0 -5"  radius="0.2"  height="2" color="#8B5A2B"></a-cylinder>
-<a-sphere src="assets3/Leaves.jpg" position="0 1.5 -5" radius="1"   color="#228B22" ></a-sphere>
+      <a-sky src="Assets3/Backdrop.jpg" " ></a-sky>
+      <a-cylinder src="Assets3/ood.jpeg" position="0 0 -5"  radius="0.2"  height="2" color="#8B5A2B"></a-cylinder>
+      <a-sphere src="Assets3/Leaves.jpg" position="0 1.5 -5" radius="1"   color="#228B22" ></a-sphere>
 
-<!-- Bunny-->
-<a-sphere src="assets3/Fur.jpeg" position="3 0.5 -5" radius="0.5" color="#ffffff"></a-sphere>
+      <!-- Bunny-->
+      <a-sphere src="Assets3/Fur.jpeg" position="3 0.5 -5" radius="0.5" color="#ffffff"></a-sphere>
 
-<!-- Bunny Head -->
-<a-sphere src="assets3/Fur.jpeg" position="3 1.1 -5" radius="0.35" color="#ffffff"></a-sphere>
+      <!-- Bunny Head -->
+      <a-sphere src="Assets3/Fur.jpeg" position="3 1.1 -5" radius="0.35" color="#ffffff"></a-sphere>
 
-<!-- Bunny Ears -->
-<a-cylinder src="assets3/Fur.jpeg" position="2.85 1.55 -5" radius="0.07" height="0.5" color="#ffffff"></a-cylinder>
-<a-cylinder src="assets3/Fur.jpeg" position="3.15 1.55 -5" radius="0.07" height="0.5" color="#ffffff"></a-cylinder>
-<a-cylinder position="2.85 1.55 -4.95" radius="0.04" height="0.5" color="#ffb6c1"></a-cylinder>
-<a-cylinder position="3.15 1.55 -4.95" radius="0.04" height="0.5" color="#ffb6c1"></a-cylinder>
+      <!-- Bunny Ears -->
+      <a-cylinder src="Assets3/Fur.jpeg" position="2.85 1.55 -5" radius="0.07" height="0.5" color="#ffffff"></a-cylinder>
+      <a-cylinder src="Assets3/Fur.jpeg" position="3.15 1.55 -5" radius="0.07" height="0.5" color="#ffffff"></a-cylinder>
+      <a-cylinder position="2.85 1.55 -4.95" radius="0.04" height="0.5" color="#ffb6c1"></a-cylinder>
+      <a-cylinder position="3.15 1.55 -4.95" radius="0.04" height="0.5" color="#ffb6c1"></a-cylinder>
 
-<!-- Eyes -->
-<a-sphere position="2.93 1.15 -4.7" radius="0.05" color="#000000"></a-sphere>
-<a-sphere position="3.07 1.15 -4.7" radius="0.05" color="#000000"></a-sphere>
+      <!-- Eyes -->
+      <a-sphere position="2.93 1.15 -4.7" radius="0.05" color="#000000"></a-sphere>
+      <a-sphere position="3.07 1.15 -4.7" radius="0.05" color="#000000"></a-sphere>
 
-<!-- Nose -->
-<a-sphere position="3 1.05 -4.65" radius="0.03" color="#ff69b4"></a-sphere>
+      <!-- Nose -->
+      <a-sphere position="3 1.05 -4.65" radius="0.03" color="#ff69b4"></a-sphere>
 
-<!-- Feet -->
-<a-sphere src="assets3/Fur.jpeg" position="2.8 0.2 -4.7" radius="0.15" color="#ffffff"></a-sphere>
-<a-sphere src="assets3/Fur.jpeg" position="3.2 0.2 -4.7" radius="0.15" color="#ffffff"></a-sphere>
+      <!-- Feet -->
+      <a-sphere src="Assets3/Fur.jpeg" position="2.8 0.2 -4.7" radius="0.15" color="#ffffff"></a-sphere>
+      <a-sphere src="Assets3/Fur.jpeg" position="3.2 0.2 -4.7" radius="0.15" color="#ffffff"></a-sphere>
 
-<!-- Tail -->
-<a-sphere src="assets3/Fur.jpeg" position="3 0.7 -5.5" radius="0.15" color="#ffffff"></a-sphere> position="0 1.5 -5" radius="1" color="#228B22"></a-sphere>
+      <!-- Tail -->
+      <a-sphere src="Assets3/Fur.jpeg" position="3 0.7 -5.5" radius="0.15" color="#ffffff"></a-sphere> position="0 1.5 -5" radius="1" color="#228B22"></a-sphere>
 
