--- a/ImageProject-03/index.html
+++ b/ImageProject-03/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <a-scene>
-      <a-sky src="Assets3/Backdrop.jpg" " ></a-sky>
+      <a-sky src="Assets3/BACKGROUND2.png" " ></a-sky>
       <!--Tree1-->
       <a-cylinder src="Assets3/ood.jpeg" position="0 0 -5"  radius="0.2"  height="2" color="#8B5A2B"></a-cylinder>
       <a-sphere src="Assets3/Leaves.jpg" position="0 1.5 -5" radius="1"   color="#228B22" ></a-sphere>
@@ -40,27 +40,28 @@
       <!-- Tail -->
       <a-sphere src="Assets3/Fur.jpeg" position="3 0.7 -5.5" radius="0.15" color="#ffffff"></a-sphere> position="0 1.5 -5" radius="1" color="#228B22"></a-sphere>
 
-      <!-- Suirrel -->
-    <a-sphere position="-4 0.6 -5" radius="0.35" color="#A0522D"></a-sphere>
+     
+ <!-- Suirrel -->
+      <a-sphere position="-4 0.6 -5" radius="0.35" color="#A0522D"></a-sphere>
 
-<!-- Head -->
-<a-sphere position="-4 1.0 -5" radius="0.25" color="#A0522D"></a-sphere>
-<a-sphere position="-4.12 1.18 -5" radius="0.07" color="#A0522D"></a-sphere>
-<a-sphere position="-3.88 1.18 -5" radius="0.07" color="#A0522D"></a-sphere>
+      <!-- Head -->
+      <a-sphere position="-4 1.0 -5" radius="0.25" color="#A0522D"></a-sphere>
+      <a-sphere position="-4.12 1.18 -5" radius="0.07" color="#A0522D"></a-sphere>
+      <a-sphere position="-3.88 1.18 -5" radius="0.07" color="#A0522D"></a-sphere>
 
-<!-- eyes -->
-<a-sphere position="-4.07 1.02 -4.8" radius="0.04" color="#000000"></a-sphere>
-<a-sphere position="-3.93 1.02 -4.8" radius="0.04" color="#000000"></a-sphere>
+      <!-- eyes -->
+      <a-sphere position="-4.07 1.02 -4.8" radius="0.04" color="#000000"></a-sphere>
+      <a-sphere position="-3.93 1.02 -4.8" radius="0.04" color="#000000"></a-sphere>
 
-<!-- Nose -->
-<a-sphere position="-4 0.95 -4.77" radius="0.03" color="#000000"></a-sphere>
+      <!-- Nose -->
+      <a-sphere position="-4 0.95 -4.77" radius="0.03" color="#000000"></a-sphere>
 
-<!-- Foot1 -->
-<a-sphere position="-4.18 0.3 -4.85" radius="0.1" color="#A0522D"></a-sphere>
+      <!-- Foot1 -->
+      <a-sphere position="-4.18 0.3 -4.85" radius="0.1" color="#A0522D"></a-sphere>
 
-<!-- Foot2 -->
-<a-sphere position="-3.82 0.3 -4.85" radius="0.1" color="#A0522D"></a-sphere>
+      <!-- Foot2 -->
+      <a-sphere position="-3.82 0.3 -4.85" radius="0.1" color="#A0522D"></a-sphere>
 
-<!-- Tail -->
-<a-sphere position="-3.7 0.9 -5.2" radius="0.3" color="#A0522D"></a-sphere>
+      <!-- Tail -->
+      <a-sphere position="-3.7 0.9 -5.2" radius="0.3" color="#A0522D"></a-sphere>
 
