change squirrell texture

--- a/ImageProject-03/index.html
+++ b/ImageProject-03/index.html
@@ -42,12 +42,12 @@
 
      
  <!-- Suirrel -->
-      <a-sphere position="-4 0.6 -5" radius="0.35" color="#A0522D"></a-sphere>
+      <a-sphere src="Assets3/Brown fur.jpeg" position="-4 0.6 -5" radius="0.35" color="#A0522D"></a-sphere>
 
       <!-- Head -->
-      <a-sphere position="-4 1.0 -5" radius="0.25" color="#A0522D"></a-sphere>
-      <a-sphere position="-4.12 1.18 -5" radius="0.07" color="#A0522D"></a-sphere>
-      <a-sphere position="-3.88 1.18 -5" radius="0.07" color="#A0522D"></a-sphere>
+      <a-sphere src="Assets3/Brown fur.jpeg" position="-4 1.0 -5" radius="0.25" color="#A0522D"></a-sphere>
+      <a-sphere src="Assets3/Brown fur.jpeg" position="-4.12 1.18 -5" radius="0.07" color="#A0522D"></a-sphere>
+      <a-sphere src="Assets3/Brown fur.jpeg" position="-3.88 1.18 -5" radius="0.07" color="#A0522D"></a-sphere>
 
       <!-- eyes -->
       <a-sphere position="-4.07 1.02 -4.8" radius="0.04" color="#000000"></a-sphere>
@@ -57,11 +57,11 @@
       <a-sphere position="-4 0.95 -4.77" radius="0.03" color="#000000"></a-sphere>
 
       <!-- Foot1 -->
-      <a-sphere position="-4.18 0.3 -4.85" radius="0.1" color="#A0522D"></a-sphere>
+      <a-sphere src="Assets3/Brown fur.jpeg" position="-4.18 0.3 -4.85" radius="0.1" color="#A0522D"></a-sphere>
 
       <!-- Foot2 -->
-      <a-sphere position="-3.82 0.3 -4.85" radius="0.1" color="#A0522D"></a-sphere>
+      <a-sphere src="Assets3/Brown fur.jpeg" position="-3.82 0.3 -4.85" radius="0.1" color="#A0522D"></a-sphere>
 
       <!-- Tail -->
-      <a-sphere position="-3.7 0.9 -5.2" radius="0.3" color="#A0522D"></a-sphere>
+      <a-sphere src="Assets3/Brown fur.jpeg" position="-3.7 0.9 -5.2" radius="0.3" color="#A0522D"></a-sphere>
 
