--- a/ImageProject-03/index.html
+++ b/ImageProject-03/index.html
@@ -42,26 +42,26 @@
 
      
  <!-- Suirrel -->
-      <a-sphere src="Assets3/Brown fur.jpeg" position="-4 0.6 -5" radius="0.35" color="#A0522D"></a-sphere>
+      <a-sphere src="Assets3/Brown fur.jpeg" position="-4 -0.4 -5" radius="0.35" color="#A0522D"></a-sphere>
 
       <!-- Head -->
-      <a-sphere src="Assets3/Brown fur.jpeg" position="-4 1.0 -5" radius="0.25" color="#A0522D"></a-sphere>
-      <a-sphere src="Assets3/Brown fur.jpeg" position="-4.12 1.18 -5" radius="0.07" color="#A0522D"></a-sphere>
-      <a-sphere src="Assets3/Brown fur.jpeg" position="-3.88 1.18 -5" radius="0.07" color="#A0522D"></a-sphere>
+      <a-sphere src="Assets3/Brown fur.jpeg" position="-4 0.0 -5" radius="0.25" color="#A0522D"></a-sphere>
+      <a-sphere src="Assets3/Brown fur.jpeg" position="-4.12 0.18 -5" -5" radius="0.07" color="#A0522D"></a-sphere>
+      <a-sphere src="Assets3/Brown fur.jpeg" position="-3.88 0.18 -5" radius="0.07" color="#A0522D"></a-sphere>
 
       <!-- eyes -->
-      <a-sphere position="-4.07 1.02 -4.8" radius="0.04" color="#000000"></a-sphere>
-      <a-sphere position="-3.93 1.02 -4.8" radius="0.04" color="#000000"></a-sphere>
+      <a-sphere position="-4.07 0.02 -4.8" radius="0.04" color="#000000"></a-sphere>
+      <a-sphere position="-3.93 0.02 -4.8" radius="0.04" color="#000000"></a-sphere>
 
       <!-- Nose -->
-      <a-sphere position="-4 0.95 -4.77" radius="0.03" color="#000000"></a-sphere>
+      <a-sphere position="-4 -0.05 -4.77" radius="0.03" color="#FFB6C1"></a-sphere>
 
       <!-- Foot1 -->
-      <a-sphere src="Assets3/Brown fur.jpeg" position="-4.18 0.3 -4.85" radius="0.1" color="#A0522D"></a-sphere>
+      <a-sphere src="Assets3/Brown fur.jpeg" position="-4.18 -0.7 -4.85" radius="0.1" color="#A0522D"></a-sphere>
 
       <!-- Foot2 -->
-      <a-sphere src="Assets3/Brown fur.jpeg" position="-3.82 0.3 -4.85" radius="0.1" color="#A0522D"></a-sphere>
+      <a-sphere src="Assets3/Brown fur.jpeg" position="-3.82 -0.7 -4.85" radius="0.1" color="#A0522D"></a-sphere>
 
       <!-- Tail -->
-      <a-sphere src="Assets3/Brown fur.jpeg" position="-3.7 0.9 -5.2" radius="0.3" color="#A0522D"></a-sphere>
+      <a-sphere src="Assets3/Brown fur.jpeg" position="-3.7 -0.1 -5.2" radius="0.3" color="#A0522D"></a-sphere>
 
