--- a/ImageProject-03/index.html
+++ b/ImageProject-03/index.html
@@ -12,7 +12,10 @@
       <!--Tree2-->
       <a-cylinder src="Assets3/ood.jpeg" position="-3 0 -6" radius="0.25" height="2.5" color="#8B5A2B"></a-cylinder>
       <a-sphere src="Assets3/Leaves.jpg" position="-3 1.7 -6" radius="1.4"   color="#228B22" ></a-sphere>
+<!-- tree1 -->
+<a-cylinder  position="0 0 6" radius="0.35" height="4"color="#8B5A2B" ></a-cylinder>
 
+<a-sphere position="0 2.8 6"  radius="2" color="#2E8B57"></a-sphere>
 
       <!-- Bunny-->
       <a-sphere src="Assets3/Fur.jpeg" position="3 -0.5 -5" radius="0.5" color="#ffffff"></a-sphere>
