--- a/ImageProject-03/index.html
+++ b/ImageProject-03/index.html
@@ -14,8 +14,12 @@
       <a-sphere src="Assets3/Leaves.jpg" position="-3 1.7 -6" radius="1.4"   color="#228B22" ></a-sphere>
 <!-- tree1 -->
 <a-cylinder  position="0 0 6" radius="0.35" height="4"color="#8B5A2B" ></a-cylinder>
-
 <a-sphere position="0 2.8 6"  radius="2" color="#2E8B57"></a-sphere>
+
+<!-- FLOWERS UNDER BEHIND TREE -->
+<a-sphere position="0.5 0.1 5.5" radius="0.1" color="#ff69b4"></a-sphere>
+<a-sphere position="-0.4 0.1 5.7" radius="0.1" color="#ffd700"></a-sphere>
+<a-sphere position="0.2 0.1 6.4" radius="0.1" color="#9370db"></a-sphere>
 
       <!-- Bunny-->
       <a-sphere src="Assets3/Fur.jpeg" position="3 -0.5 -5" radius="0.5" color="#ffffff"></a-sphere>
