restore bunny ears

--- a/ImageProject-03/index.html
+++ b/ImageProject-03/index.html
@@ -24,10 +24,10 @@
           <a-sphere src="Assets3/Fur.jpeg" position="3 0.1 -5" radius="0.35" color="#ffffff"></a-sphere>
       
         <!-- Bunny Ears -->
-            <a-cylinder src="Assets3/Fur.jpeg" position="-0.15 1.55 -5" radius="0.07" height="0.5" color="#ffffff"></a-cylinder>
-            <a-cylinder src="Assets3/Fur.jpeg" position="0.15 1.55 -5" radius="0.07" height="0.5" color="#ffffff"></a-cylinder>
-            <a-cylinder src="Assets3/Fur.jpeg" position="-0.15 1.55 -4.95" radius="0.04" height="0.5" color="#ffb6c1"></a-cylinder>
-            <a-cylinder src="Assets3/Fur.jpeg" position="0.15 1.55 -4.95" radius="0.04" height="0.5" color="#ffb6c1"></a-cylinder>
+            <a-cylinder src="Assets3/Fur.jpeg" position="2.85 0.55 -5" radius="0.07" height="0.5" color="#ffffff"></a-cylinder>
+            <a-cylinder src="Assets3/Fur.jpeg" position="3.15 0.55 -5" radius="0.07" height="0.5" color="#ffffff"></a-cylinder>
+           <a-cylinder position="2.85 0.55 -4.95" radius="0.04" height="0.5" color="#ffb6c1"></a-cylinder>
+           <a-cylinder position="3.15 0.55 -4.95" radius="0.04" height="0.5" color="#ffb6c1"></a-cylinder>
 
         <!-- Eyes -->
             <a-sphere position="2.93 0.15 -4.7" radius="0.05" color="#000000"></a-sphere>
