--- a/ImageProject-03/index.html
+++ b/ImageProject-03/index.html
@@ -95,25 +95,25 @@
         <a-sphere src="Assets3/Fur.jpeg" position="6 -0.3 -7.5" radius="0.15" color="#ffffff"></a-sphere>
 
   <!-- RedBird -->
-        <a-sphere position="5 -0.8 -3" radius="0.25" color="#ff0000"></a-sphere>
+      <a-sphere position="10 -0.8 -3" radius="0.25" color="#ff0000"></a-sphere>
 
-      <!-- BIRD HEAD -->
-        <a-sphere position="5 -0.6 -2.85" radius="0.18" color="#ff0000"></a-sphere>
+    <!-- Head-->
+      <a-sphere position="10 -0.6 -2.85" radius="0.18" color="#ff0000"></a-sphere>
 
-      <!-- EYES (facing toward camera) -->
-        <a-sphere position="4.95 -0.55 -2.75" radius="0.04" color="#000000"></a-sphere>
-        <a-sphere position="5.05 -0.55 -2.75" radius="0.04" color="#000000"></a-sphere>
+    <!-- Eyes -->
+      <a-sphere position="9.95 -0.55 -2.75" radius="0.04" color="#000000"></a-sphere>
+      <a-sphere position="10.05 -0.55 -2.75" radius="0.04" color="#000000"></a-sphere>
 
-      <!-- BEAK -->
-        <a-cylinder position="5 -0.6 -2.68" radius="0.04" height="0.12" rotation="90 0 0" color="#ffa500"></a-cylinder>
+    <!-- BeaK -->
+      <a-cylinder position="10 -0.6 -2.68" radius="0.04" height="0.12" rotation="90 0 0" color="#ffa500"></a-cylinder>
 
-      <!-- WINGS -->
-        <a-sphere position="4.88 -0.8 -3" radius="0.1" color="#cc0000"></a-sphere>
-        <a-sphere position="5.12 -0.8 -3" radius="0.1" color="#cc0000"></a-sphere>
+    <!-- Wings -->
+      <a-sphere position="9.88 -0.8 -3" radius="0.1" color="#cc0000"></a-sphere>
+      <a-sphere position="10.12 -0.8 -3" radius="0.1" color="#cc0000"></a-sphere>
 
-      <!-- TAIL -->
-        <a-sphere position="5 -0.8 -3.25" radius="0.1" color="#cc0000"></a-sphere>
+    <!-- Tail -->
+      <a-sphere position="10 -0.8 -3.25" radius="0.1" color="#cc0000"></a-sphere>
 
-      <!-- FEET -->
-        <a-sphere position="4.93 -1.0 -2.95" radius="0.05" color="#ffa500"></a-sphere>
-        <a-sphere position="5.07 -1.0 -2.95" radius="0.05" color="#ffa500"></a-sphere>
+    <!-- Feet -->
+      <a-sphere position="9.93 -1.0 -2.95" radius="0.05" color="#ffa500"></a-sphere>
+      <a-sphere position="10.07 -1.0 -2.95" radius="0.05" color="#ffa500"></a-sphere>
